# poc-kokkos-rs

./: .gitignore  Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: rustdoc.yml  simple-ci.yml
benches/: axpy.rs  feature.rs  gemm.rs  gemv.rs  hardcoded_gemm.rs  layout.rs  mdrange_populate.rs  parallel_for_populate.rs  view_access.rs  view_init.rs  view_populate.rs
benches/blas-speedup/: axpy.rs  gemm.cpp  gemm.rs  gemv.cpp  gemv.rs
benches/blas-speedup-kokkos/: .gitignore  CMakeLists.txt  axpy.cpp  build.sh  gemm.cpp  gemv.cpp
benches/layout/: comparison.rs  hardcoded.rs  size.rs
docs/: index.html
examples/: hello_world.rs
examples/hello-world/: build.rs  hello.cpp  hello.hpp  main.rs
examples/openmp-parallel/: build.rs  main.rs  many_hello.cpp  many_hello.hpp
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/poc_kokkos_rs/view/parameters/: trait.DataTraits.js
include/: hello.hpp
poc_kokkos_rs/: all.html  index.html  sidebar-items.js
poc_kokkos_rs/ffi/: fn.say_hello.html  fn.say_many_hello.html  index.html  sidebar-items.js
poc_kokkos_rs/functor/: enum.KernelArgs.html  index.html  sidebar-items.js  type.ForKernelType.html  type.SerialForKernelType.html
poc_kokkos_rs/routines/: enum.StatementError.html  fn.parallel_for.html  index.html  sidebar-items.js
poc_kokkos_rs/routines/dispatch/: enum.DispatchError.html  fn.cpu.html  fn.gpu.html  fn.serial.html  index.html  sidebar-items.js
poc_kokkos_rs/routines/parameters/: enum.ExecutionSpace.html  enum.RangePolicy.html  enum.Schedule.html  index.html  sidebar-items.js  struct.ExecutionPolicy.html
poc_kokkos_rs/view/: enum.ViewError.html  index.html  sidebar-items.js  struct.ViewBase.html  type.ViewOwned.html  type.ViewRO.html  type.ViewRW.html
poc_kokkos_rs/view/parameters/: constant.MAX_VIEW_DEPTH.html  enum.DataType.html  enum.Layout.html  fn.compute_stride.html  index.html  sidebar-items.js  trait.DataTraits.html  type.InnerDataType.html
scripts/: cache-miss-rates.py  cache-sizes.py  gemm-sizes.py
search.desc/poc_kokkos_rs/: poc_kokkos_rs-desc-0-.js
search.index/: 07e452eae81d.js  27dbb48b2bb7.js  394521bcbc85.js  39e971028787.js  4417b91943c2.js  50283b3d2664.js  5cd923b26e7c.js  5e3f7808fd57.js  7bc674aafba0.js  root.js
search.index/crateNames/: a6bc92051d42.js
search.index/desc/: 71e02f136afc.js
search.index/entry/: ca73d5150bbc.js
search.index/function/: f8cc8be44bf5.js
search.index/generic_inverted_index/: 212d363d1f1a.js
search.index/name/: 1fb56965e960.js
search.index/normalizedName/: c103d880ea0a.js
search.index/path/: 83da6229ff41.js
search.index/type/: c10df29ff1d4.js
src/: functor.rs  hello.cpp  lib.rs  main.rs  view.rs
src/cpp/: hello.cpp
src/functor/: for_kernel.rs  mod.rs  policies.rs
src/include/: hello.hpp
src/poc_kokkos_rs/: functor.rs.html  lib.rs.html
src/poc_kokkos_rs/routines/: dispatch.rs.html  mod.rs.html  parameters.rs.html
src/poc_kokkos_rs/view/: mod.rs.html  parameters.rs.html
src/routines/: dispatch.rs  mod.rs  parameters.rs
src/traits/: data.rs  dimension.rs  mod.rs
src/view/: mod.rs  parameters.rs  traits.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/index/: trait.Index.js  trait.IndexMut.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/poc_kokkos_rs/view/parameters/: trait.DataTraits.js
type.impl/alloc/boxed/: struct.Box.js
type.impl/poc_kokkos_rs/functor/: type.SerialForKernelType.js
type.impl/poc_kokkos_rs/view/: struct.ViewBase.js
