[package]
name = "poc-kokkos-rs"
version = "0.1.0"
edition = "2021"

# OPTIMIZATION

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

# FEATURES 

[features]
threads = ["dep:atomic", "dep:num_cpus"]
rayon =   ["dep:atomic", "dep:num_cpus", "dep:rayon"]
gpu =     ["dep:atomic"]

# DEPENDENCIES

[dependencies]
cxx      = "*"
cfg-if   = "*"
rayon    = {version = "*", optional=true}
atomic   = {version = "0.5.3", optional=true}
num_cpus = {version = "*", optional=true}
#bytemuck = {version = "*", optional=true} # needed for atomic >= 0.6.0

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }
rand      = { version = "*", features = ["small_rng", "alloc"] }
atomic   = {version = "0.5.3"}
rayon    = {version = "*"}

[build-dependencies]
cxx-build = "*"

# BENCHMARKS

## misc 

[[bench]]
name = "view_init"
harness = false

[[bench]]
name = "view_access"
harness = false

## layout 

[[bench]]
name = "layout-size"
path = "benches/layout/size.rs"
harness = false

[[bench]]
name = "layout-comparison"
path = "benches/layout/comparison.rs"
harness = false

## blas speedup measures

[[bench]]
name = "axpy"
path = "benches/blas-speedup/axpy.rs"
harness = false

[[bench]]
name = "gemv"
path = "benches/blas-speedup/gemv.rs"
harness = false

[[bench]]
name = "gemm"
path = "benches/blas-speedup/gemm.rs"
harness = false

## library overhead measures

[[bench]]
name = "hardcoded_gemm"
harness = false