[package]
name = "poc-kokkos-rs"
version = "0.1.0"
edition = "2021"

# OPTIMIZATION

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
debug = true

# FEATURES 

[features]
threads = ["dep:atomic", "dep:num_cpus"]
rayon = ["dep:atomic", "dep:num_cpus", "dep:rayon"]
gpu = ["dep:atomic"]

# DEPENDENCIES

[dependencies]
atomic = { version = "0.6.0", optional = true }
bytemuck = "1.23.0"
cfg-if = "1.0.0"
num_cpus = { version = "1.17.0", optional = true }
rand = { version = "0.9.1", features = ["small_rng", "alloc"] }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
atomic = { version = "0.6.0" }
criterion = { version = "0.6.0", features = ["html_reports"] }
rayon = { version = "1.10.0" }

# BENCHMARKS

## misc 

[[bench]]
name = "view_init"
harness = false

[[bench]]
name = "view_access"
harness = false

## layout 

[[bench]]
name = "layout-size"
path = "benches/layout/size.rs"
harness = false

[[bench]]
name = "layout-comparison"
path = "benches/layout/comparison.rs"
harness = false

## blas speedup measures

[[bench]]
name = "axpy"
path = "benches/blas-speedup/axpy.rs"
harness = false

[[bench]]
name = "gemv"
path = "benches/blas-speedup/gemv.rs"
harness = false

[[bench]]
name = "gemm"
path = "benches/blas-speedup/gemm.rs"
harness = false

## library overhead measures

[[bench]]
name = "hardcoded_gemm"
harness = false
